Fix button alignment on phone.

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -37,7 +37,7 @@
 }
 
 .btn-full {
-    margin-left: 10px;
+    margin: 10px 0 0 10px;
 }
 
 .location {
